# stg_light_eval

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt  setup.cfg
baselines/gsplat/: __init__.py  run_gsplat_stub.py
baselines/pointtracks/: run_pointtracks_stub.py
baselines/slotattn/: run_slotattn_stub.py
eval/: eval_efficiency.py  eval_real.py  eval_synthetic.py  grammar_induction.py
metrics/: __init__.py  metrics.py
notebooks/: run_eval.ipynb
real_data_prep/: __init__.py  download_cityscapes_frames.py  download_llff.py  prepare_rgbd_mini.py
scripts/: smoke_test.sh
synthetic/: generate_scenes.py  preview_scene.py
tables/: make_figs.py  make_tables.py  paper_assets.md
utils/: io.py  timer.py  vis.py
