[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stg-light-eval"
version = "0.1.0"
description = "Lightweight evaluation suite for spatio-temporal scene grammars"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "stg_light_eval Contributors" }
]
license = { file = "LICENSE" }
keywords = ["spatio-temporal", "scene-grammar", "evaluation", "cvpr"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = []

[project.optional-dependencies]
dev = [
  "flake8>=6.0",
  "isort>=5.12",
  "pytest>=7.4"
]

[project.urls]
Homepage = "https://example.com/stg-light-eval"
Repository = "https://example.com/stg-light-eval.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["stg_light_eval*", "synthetic", "metrics", "eval", "tables", "utils", "baselines*"]

